# drf-boilerplate

./: .dockerignore  .gitignore  Dockerfile  Makefile  asgi.py  docker-compose.yml  manage.py  pyproject.toml  wsgi.py
api/commons/: apps.py  models.py
api/core/: urls.py  views.py
settings/: base.py  local.py  test.py
urls/: urls.py
urls/v1/: public_urls.py
